# python-docx

./: .gitignore  README.md  pyproject.toml
ref/: styles.xml
src/docx/: __init__.py  api.py  blkcntnr.py  document.py  shape.py  types.py
src/docx/drawing/: __init__.py  alternate.py
src/docx/enum/: shape.py
src/docx/image/: __init__.py  constants.py  emf.py  image.py  jpeg.py  svg.py  webp.py  wmf.py
src/docx/math/: __init__.py
src/docx/opc/: constants.py  oxml.py  package.py  phys_pkg.py  pkgreader.py
src/docx/oxml/: __init__.py  alternate.py  document.py  drawing.py  ftnedn.py  math.py  ns.py  numbering.py  shape.py  xmlchemy.py
src/docx/oxml/text/: block.py  field.py  ftnedn.py  hyperlink.py  paragraph.py  run.py  symbol.py
src/docx/parts/: comments.py  document.py  ftnedn.py  numbering.py  ole.py  people.py
src/docx/templates/: default-endnotes.xml  default-footnotes.xml  default-styles.xml  default.docx
src/docx/templates/default-docx-template/word/: styles.xml
src/docx/text/: block.py  field.py  ftnedn.py  ftnedn_ref.py  hyperlink.py  paragraph.py  run.py  symbol.py
